[project]
name = "mcp-sample-python"
version = "0.1.0"
description = ""
authors = [
    {name = "matheus.tessaroli",email = "matheus.tessaroli@olist.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli] (>=1.6.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
